summative.moria.Moria.scala.error
Erreur de compilation :
Moria:6: error: not found: value ava
      ava
      ^Moria:14: error: not found: value Direction
  while(getDirection!=Direction.OUEST){
                      ^